--- a/Plugins/Kinect4Unreal v 1.0/Kinect4Unreal.uplugin
+++ b/Plugins/Kinect4Unreal v 1.0/Kinect4Unreal.uplugin
@@ -3,11 +3,11 @@
 
 	"FriendlyName" : "Kinect 4 Unreal",
 	"Version" : 1,
-	"VersionName" : "1.0",
+	"VersionName" : "0.7",
 	"CreatedBy" : "Opaque Multimedia",
 	"CreatedByURL" : "www.opaquemultimedia.com",
 	"EngineVersion" : 1579795,
-	"Description" : "Kinect 4 Unreal enables the use of Kinect 2 for Windows in Unreal 4",
+	"Description" : "Beta buid of Kinect 4 Unreal plugin for testing purposes only",
 	"Category" : "Kinect",
 	"EnabledByDefault" : "true",
 	
